--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,25 @@
 
 
+
+                    JGoodies Looks, Version 1.1.3
+                            Release Notes
+                        
+
+INTRODUCTION
+
+    This release is just adds service descriptors to all JARs
+    for automatic look&feel detection. 
+
+
+DISTRIBUTION CHANGES
+
+    o Addes service descriptors to all library JARs
+    
+    
+    
+-------------------------------------------------------------------------------
+
+
                     JGoodies Looks, Version 1.1.2
                             Release Notes
                         
