--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,31 @@
 
 
 
+                JGoodies Looks, Version 1.2 Preview 1
+                            Release Notes
+                        
+
+INTRODUCTION
+
+    This release supports Java 1.4 or later only. 
+
+
+DISTRIBUTION CHANGES
+
+    o Removed JGoodies Motif Look&Feel
+    
+    
+OTHER CHANGES
+
+    o Code: ...
+    
+    
+-------------------------------------------------------------------------------
+
+Find below the change history for older releases.
+
+
+
                     JGoodies Looks, Version 1.1.3
                             Release Notes
                         
@@ -31,8 +56,9 @@ OTHER CHANGES
     o Code: Extended and corrected JavaDocs.
     
     
-    
 -------------------------------------------------------------------------------
+
+Find below the change history for older releases.
 
 
                     JGoodies Looks, Version 1.1.2
