--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -18,9 +18,10 @@ DISTRIBUTION CHANGES
     
 BUGS FIXED
 
-    o ExtWin:  Catches IllegalAccessExceptions in untrusted environments.
-    o Plastic: Non-editable combo abbreviates longer label.
-    o Plastic: Editable combo too narrow; shall take arrow button into account
+    o All l&fs: Fixed inconsistent JFormattedTextField font
+    o ExtWin:   Catches IllegalAccessExceptions in untrusted environments.
+    o Plastic:  Non-editable combo abbreviates longer label.
+    o Plastic:  Editable combo too narrow; shall take arrow button into account
 
 
 NEW FEATURES
@@ -30,6 +31,7 @@ NEW FEATURES
 OTHER CHANGES
 
     o All code: Removed 1.3 code
+    o All code: Reformatted sources
     o All l&fs: Menu item layout ensures a minimum arrow icon width
     o All l&fs: Menu item layout uses larger gap between text and accelerator
     o Plastic:  layout of editable combos improved - arrows aligned 
