--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,11 @@
+o Schriftgröße im ExtWindows l&f in JFormattedTextField falsch;
+  auch in Plastic?
+o Separator in Window unter 1.4.2 falsch - nur in XP?
 o Anpassungen des ExtWindows l&f für 1.4.2
 o Schriftwahl in Plastic-Themen überarbeiten
   + andere Oberklasse
   + Tahoma-Hard code raus
-o 1.3-Unterstützung raus
+
 
 o Bug in Plastic: Jay Gindin hat ScrollBar-Problem gefunden.
 o Bug: Tahoma ist schlechte Wahl in asiatischen Kulturräumen,
