--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -18,10 +18,10 @@ DISTRIBUTION CHANGES
     
 BUGS FIXED
 
-    o All l&fs: Fixed inconsistent JFormattedTextField font
-    o ExtWin:   Catches IllegalAccessExceptions in untrusted environments.
-    o Plastic:  Non-editable combo abbreviates longer label.
-    o Plastic:  Editable combo too narrow; shall take arrow button into account
+    o All l&fs: Inconsistent JFormattedTextField font.
+    o ExtWin:   IllegalAccessExceptions in untrusted environments.
+    o Plastic:  Non-editable combo abbreviates long label.
+    o Plastic:  Editable combo too narrow; doesn't take arrow button into account
 
 
 NEW FEATURES
@@ -35,6 +35,9 @@ OTHER CHANGES
     o All l&fs: Menu item layout ensures a minimum arrow icon width
     o All l&fs: Menu item layout uses larger gap between text and accelerator
     o Plastic:  layout of editable combos improved - arrows aligned 
+    o Shared:   Renamed constants in LookUtils to follow the naming conventions 
+                as used by the Jakarta Commons Lang SystemUtils class.
+    o ExtWin:   Improved detection of the Windows XP style on Windows XP
     
     
 -------------------------------------------------------------------------------
