--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,5 @@
+o Add a comment to the Release notes regarding the overall progress.
+
 o Schriftgröße im ExtWindows l&f in JFormattedTextField falsch;
   auch in Plastic?
 o Separator in Window unter 1.4.2 falsch - nur in XP?
@@ -6,6 +8,11 @@ o Schriftwahl in Plastic-Themen überarbeiten
   + andere Oberklasse
   + Tahoma-Hard code raus
 
+
+o 1.3: Discontinue support for three jars. Provide the looks-xxx.jar only.
+       Discontinue support for ClearLook as integrated tool;
+       replace it with a LintLook, DebugLook, or StylistLook.
+     
 
 o Bug in Plastic: Jay Gindin hat ScrollBar-Problem gefunden.
 o Bug: Tahoma ist schlechte Wahl in asiatischen Kulturräumen,
