--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,6 +1,41 @@
 
 
 
+                    JGoodies Looks, Version 1.2.1 Snapshot
+                            Release Notes
+                        
+
+INTRODUCTION
+
+    This maintenance release fixes a couple of bugs.
+
+
+BUGS FIXED
+
+    o ExtWin:    SpinnerUI broken in 1.4.0 and 1.4.1
+    o ExtWin:    ToolBarSeperatorUI broken in 1.4.0 and 1.4.1
+    o ExtWin:    Missing Java cup icon in 1.5
+
+
+KNOWN ISSUES
+
+    o This release still lacks an improved font management
+      for the Plastic l&f family on non-Windows platforms.
+
+
+OTHER CHANGES
+
+    o ExtWin:    Reduced the number of updates to the UIDefaults.
+    
+    
+-------------------------------------------------------------------------------
+
+Find below the change history for older releases.
+
+
+
+
+
                     JGoodies Looks, Version 1.2.0
                             Release Notes
                         
