--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -15,6 +15,8 @@ BUGS FIXED
     o ExtWin:    SpinnerUI broken in 1.4.0 and 1.4.1
     o ExtWin:    ToolBarSeperatorUI broken in 1.4.0 and 1.4.1
     o ExtWin:    Missing Java cup icon in 1.5
+    o ExtWin:    LookUtils#isWindowsXPLafEnabled fails in IBM WSAD.
+                 Actually it seems it fails on non-XP Windows flavors.
 
 
 KNOWN ISSUES
