--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -37,6 +37,7 @@ OTHER CHANGES
     o ExtWin:    Reduced the number of updates to the UIDefaults.
     o Docs:      Added a reference to the winlaf look&feel.
     o Docs:      Added FAQ, Tips & Tricks, and Acknowledgements.
+    o Demos:     Uses the Forms 1.0.4
     
     
 ---------------------------------------------------------------------------
