--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -35,7 +35,7 @@ KNOWN ISSUES
 
 OTHER CHANGES
 
-    o Docs:      ...
+    o Docs:      Added and fixed version tags.
     o Demo:      ...
     
     
