--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -7,7 +7,7 @@
 
 INTRODUCTION
 
-    This release ...
+    This release fixes bugs and uses new package and class names.
 
 
 
@@ -15,6 +15,11 @@ BUGS FIXED
 
     o Plastic internal frames use the outdated Java cup icon.  
     o Inactive drop shadows still try to snapshot via the Robot.
+    o Broken position calculation in Windows password field.
+    o #17: WindowsToolBarSeparatorUI not same in 1.4.1 and 1.4.2.
+    o #18: Height of menu items with a custom icon.
+    o #23: Menu items not anti-aliased [in 1.5 with aa enabled].
+    
     
 
 CHANGES THAT AFFECT THE COMPATIBILITY
@@ -36,9 +41,11 @@ KNOWN ISSUES
 
 OTHER CHANGES
 
-    o Docs:      Added and fixed version tags.
-    o Corrected implementation title and vendor in the JAR manifest.
-    o Demo:      ...
+    o Docs:  Added and fixed version tags.
+    o Dist:  Fixed implementation title and vendor in the JAR manifest.
+    o Demo:  ...
+    o Build: Added project name tag to the ANT build file.
+    o Build: Added overview page.
     
     
 ---------------------------------------------------------------------------
