--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,7 +1,5 @@
 
-
-
-                    JGoodies Looks, Version 1.3.0 preview
+                    JGoodies Looks, Version 1.3 Beta 1
                             Release Notes
                         
 
@@ -19,6 +17,8 @@ BUGS FIXED
     o #17: WindowsToolBarSeparatorUI not same in 1.4.1 and 1.4.2.
     o #18: Height of menu items with a custom icon.
     o #23: Menu items not anti-aliased [in 1.5 with aa enabled].
+    o Broken painting with custom combo renderer in 1.5.
+    o Broken custom table header in Windows XP style.
     
     
 
@@ -41,9 +41,10 @@ KNOWN ISSUES
 
 OTHER CHANGES
 
+    o Core:  Uses more shared UI instances.
     o Docs:  Added and fixed version tags.
     o Dist:  Fixed implementation title and vendor in the JAR manifest.
-    o Demo:  ...
+    o Demo:  Added test case for all tab placements in both layouts.
     o Build: Added project name tag to the ANT build file.
     o Build: Added overview page.
     
