--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,12 +1,13 @@
 
-                    JGoodies Looks, Version 1.3 Beta 1
+                    JGoodies Looks, Version 1.3 Beta1
                             Release Notes
                         
 
 INTRODUCTION
 
     This release fixes bugs and uses new package and class names.
-
+    Java 1.5 is now supported, but some micro design improvements 
+    made in the Looks are optimized for Java 1.4.2 and Java 1.4.1.
 
 
 BUGS FIXED
@@ -14,12 +15,15 @@ BUGS FIXED
     o Plastic internal frames use the outdated Java cup icon.  
     o Inactive drop shadows still try to snapshot via the Robot.
     o Broken position calculation in Windows password field.
+    o Broken custom table header in Windows XP style.
+    o #04: Blroken Windows JTabbedPane HTML word wrap.
     o #17: WindowsToolBarSeparatorUI not same in 1.4.1 and 1.4.2.
     o #18: Height of menu items with a custom icon.
     o #23: Menu items not anti-aliased [in 1.5 with aa enabled].
+    o #27: Plastic JTabbedPane scroll buttons unclear.
     o #28: Broken painting with custom combo renderer in 1.5.
+    o #30: ShadowPopupBorder may throw a SecurityException.
     o #31: JToggleButton L&F not respecting icon text gap
-    o Broken custom table header in Windows XP style.
     
 
 CHANGES THAT AFFECT THE BINARY COMPATIBILITY
