--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,5 @@
 
-             JGoodies Looks, Version 1.3 Release Candidate
+                     JGoodies Looks, Version 1.3 
                             Release Notes
                         
 
