--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -12,11 +12,11 @@ INTRODUCTION
     It is an engineering build that has seen minimal testing; 
     it may lack functions and may contain known bugs in some areas. 
         
-    This build comes with an overhauled Windows L&f that uses 
-    a new font lookup mechanism. Also component dimensions have
-    been changed to better comply with the MS layout guidelines. 
+    The font lookup mechanism in the Windows L&f has been overhauled.
+    And text component insets have been adjusted to better comply 
+    with the Microsoft Layout Specification and Guidelines.
     
-    The component dimensions of the Plastic L&f family
+    The text component insets of the Plastic L&f family
     have been adjusted to the new Windows L&f dimensions.
     The Plastic font lookup now uses a delegate; the current
     implementation should be fine on Windows but needs improvements
@@ -29,7 +29,10 @@ CHANGES THAT AFFECT THE BINARY COMPATIBILITY
 
     All font options have been removed from the Windows L&f;
     it shall be as close to the native original as possible.
-    
+
+    o Renamed Options.CONTROL_FONT_KEY to PLASTIC_CONTROL_FONT_KEY    
+    o Removed Options.MENU_FONT_KEY
+    o Removed Options.EXT_WINDOWS_NAME
     o Removed Options.FONT_SIZE_HINTS_KEY
     o Removed Options#getGlobalFontSizeHints
     o Removed Options#setGlobalFontSizeHints
@@ -42,8 +45,7 @@ CHANGES THAT AFFECT THE BINARY COMPATIBILITY
     o Removed WindowsButtonUI
     o Removed WindowsToggleButtonUI
     o Moved FontSizeHints to com.jgoodies.looks.Plastic
-    o Removed Options.EXT_WINDOWS_NAME;
-    o Removed FontUtils#useSystemFontSettings
+    o Removed FontUtils
     o Options#initializeDefaultReplacements now private
     o Removed obsolete Plastic themes: SkyBluerTahoma, 
       ExperienceBlueDefaultFont, DesertBluerDefautFont
@@ -72,13 +74,18 @@ CHANGES THAT AFFECT THE VISUAL COMPATIBILITY
 
 BUGS FIXED
 
+    #50: ToolBar 3D effect ignores the orientation.
     #51: Windows combobox with custom render is too narrow.
     #60: Wrong combobox height in Java 5 and Java 6.
     
 
 NEW FEATURES
     
-    o Narrow buttons can be disabled in the sytem properties.
+    #50: Add option to make combo popups wider than the combo.
+    o Narrow buttons can be disabled in the system properties.
+    o Added a JPopupMenu client property for no-margin borders,
+      see Options#NO_MARGIN_KEY. This is useful if a JPopupMenu 
+      contains a single component, for example a JScrollPane.
 
 
 DISTRIBUTION CHANGES
